--- a/src/styles/style-home.css
+++ b/src/styles/style-home.css
@@ -41,7 +41,8 @@ body{
 .product-container{
     display: flex;
     flex-direction: row;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border-radius: 20px;
 }
 
 .description-container{
